# lingot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ai_coding/: ai_coding.md
deepseek/api/: deepseek_api.ipynb  gomoku.html  rag_milvus.ipynb
deepseek/homework/: deepseek提示词.md  email_validator.py
deepseek/ollama/: deepseek私有化部署.md  private_deepseek.ipynb  安装open_webui.md
deepseek/rednote/: function_calling.ipynb  rednote.ipynb
dify/: Dify构建LLM工作流.md
dify/langbot/: longbot安装.md
langchains/: data_assistant.py  deepseek.py
mcp/: mcp简介.md
mcp/weather/: weather.py
theory/: 大模型发展全景与关键技术.md  机器学习与深度学习理论.md
