[project]
name = "lingot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.24",
    "langgraph>=0.3.28",
    "mcp[cli]>=1.26.0",
    "openai==1.82.0",
    "pymilvus[model]==2.5.10",
    "requests==2.32.3",
    "torch==2.7.0",
    "tqdm==4.67.1",
]
